objects/simpli_lv__List_View_Config_Parameter__c.object
<CustomObject>
    <fields>
        <fullName>simpli_lv__List_View_Config__c</fullName>
        <description>The list view config that this parameter is asociated with.</description>
        <inlineHelpText>The list view config that this parameter is asociated with.</inlineHelpText>
        <label>List View Config</label>
        <referenceTo>simpli_lv__List_View_Config__c</referenceTo>
        <relationshipLabel>List View Config Parameters</relationshipLabel>
        <relationshipName>List_View_Config_Parameters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Parameter_Label__c</fullName>
        <label>Parameter Label</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Parameter_Name__c</fullName>
        <description>The unique name of the parameter for this config.</description>
        <inlineHelpText>The unique name of the parameter for this config.</inlineHelpText>
        <label>Parameter Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Parameter_Type__c</fullName>
        <defaultValue>&quot;String&quot;</defaultValue>
        <description>Indicates the type that the parameter should take.</description>
        <inlineHelpText>Indicates the type that the parameter should take.</inlineHelpText>
        <label>Parameter Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>boolean</fullName>
                </value>
                <value>
                    <fullName>color</fullName>
                </value>
                <value>
                    <fullName>date</fullName>
                </value>
                <value>
                    <fullName>datetime</fullName>
                </value>
                <value>
                    <fullName>email</fullName>
                </value>
                <value>
                    <fullName>number</fullName>
                </value>
                <value>
                    <fullName>string</fullName>
                    <default>true</default>
                    <label>string</label>
                </value>
                <value>
                    <fullName>url</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simpli_lv__Parameter_Value__c</fullName>
        <description>The value of the parameter.</description>
        <inlineHelpText>The value of the parameter.</inlineHelpText>
        <label>Parameter Value</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <label>List View Config Parameter</label>
    <listViews>
        <fullName>simpli_lv__All</fullName>
        <columns>NAME</columns>
        <columns>simpli_lv__Parameter_Label__c</columns>
        <columns>simpli_lv__Parameter_Name__c</columns>
        <columns>simpli_lv__Parameter_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>simpli_lv__Parameter_Value__c</columns>
        <columns>simpli_lv__List_View_Config__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>simpli_lv__All_All</fullName>
        <columns>NAME</columns>
        <columns>simpli_lv__Parameter_Name__c</columns>
        <columns>simpli_lv__Parameter_Label__c</columns>
        <columns>simpli_lv__Parameter_Type__c</columns>
        <columns>simpli_lv__List_View_Config__c</columns>
        <columns>simpli_lv__Parameter_Value__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>simpli_lv__List_View_Config__c</field>
            <operation>equals</operation>
            <value>All</value>
        </filters>
        <label>All:All</label>
    </listViews>
    <nameField>
        <displayFormat>LVCP-{0}</displayFormat>
        <label>List View Config Parameter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List View Config Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>